# translators

./: .gitignore  CMakeLists.txt  test.g4
cpp_generator/: CMakeLists.txt  helper.cpp  helper.h  main.cpp
cpp_generator/include/: helper.h  printer.h
cpp_generator/source/: helper.cpp  printer.cpp
cpp_generator/test_parser/: CMakeLists.txt  main.cpp
